--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -40,15 +40,15 @@
   </div>
   <!-- Contact -->
   <div class="navbar-brand pull-right">
-    <a data-ui-sref="contact">Contact</a>
+    <a id="contact" data-ui-sref="contact">Contact</a>
   </div>
   <!-- About -->
   <div class="navbar-brand pull-right">
-    <a data-ui-sref="about">About Us</a>
+    <a id="about" data-ui-sref="about">About Us</a>
   </div>
   <!--Home-->
   <div class="navbar-brand pull-right">
-    <a data-ui-sref="home">Home</a>
+    <a id="home" data-ui-sref="home">Home</a>
   </div>
 
   <!-- <div ng-show="authentication.user.profileType === 'Teacher'" class="navbar-brand-pull-right">
