--- a/modules/quiz/client/views/quizResults.client.view.html
+++ b/modules/quiz/client/views/quizResults.client.view.html
@@ -2,11 +2,11 @@
 	<div style="margin-top: 100px;">
         <!-- Using this for space -->
     </div>
-		<div class = "container" >
-			<br>
-			<h1> Yay you finished the section</h1>
-			<div id = "results" >
-				<h2> You got a {{score}} / {{totalNumQuestion}}!</h2>
-			</h2>
-		</div>
+	<div class = "container" >
+		<br>
+		<h1> Yay you finished the section</h1>
+
+			<h2>You got a  <div id = "results">{{score}} / {{totalNumQuestion}} </div> </h2>
+		</h2>
+	</div>
 </div>
