--- a/modules/quiz/client/css/quiz.css
+++ b/modules/quiz/client/css/quiz.css
@@ -10,5 +10,7 @@ body {
 #startButton {
 	color: black;
 	margin-top: 100px;
-	border-style: solid;
+	text-align: center;
+/*	border-style: solid;
+*/
 }
