--- a/modules/quiz/client/views/quizResults.client.view.html
+++ b/modules/quiz/client/views/quizResults.client.view.html
@@ -14,8 +14,11 @@
 			<br>
 			<div class="results-h"> Congratulations!</div>
 			<div class="results-s" id = "results" >
-				You got {{score}} / {{totalNumQuestion}} questions correct.
-			</h2>
+				<h2>
+					You got {{score}} / {{totalNumQuestion}} questions correct.
+				</h2>
+			</div>
+
 		</div>
 
 </div>
