--- a/modules/users/client/views/authentication/signup.client.view.html
+++ b/modules/users/client/views/authentication/signup.client.view.html
@@ -79,8 +79,8 @@
             <div class="row">
                 <div class="col-md-2 col-md-offset-4 text-right">
                     <ul class="list-inline">
-                        <li ng-repeat="x in credentials.coursesTeaching track by $index">
-                            <button type="button" class="btn btn-success">{{x}}</button>
+                        <li ng-repeat="x in credentials.courses track by $index">
+                            <button type="button" class="btn btn-success">{{x.courseName}}</button>
                         </li>
                     </ul>
                 </div>
