figured out class codes displaying

--- a/modules/core/client/views/teacherprofile.client.view.html
+++ b/modules/core/client/views/teacherprofile.client.view.html
@@ -7,7 +7,9 @@
       <h1 id="section-tabs-header">
         <!--teacher name-->
         {{user.firstName}} {{user.lastName}}
+        {{input.courseNums}}
       </h1>
+
 
     </div>
     <!-- left column -->
