--- a/modules/core/client/views/teacherprofile.client.view.html
+++ b/modules/core/client/views/teacherprofile.client.view.html
@@ -1,14 +1,14 @@
 <!--teacher profile page-->
 <div class="container" ng-controller="ProfileController">
-  <h1>Edit Profile</h1>
+  <div style="margin-top: 50px;">
+    </div>
   <hr>
   <div class="row">
-    <div id="left-side" class="list-view ">
+    <div id="left-side" class="list-view " >
       <h1 id="section-tabs-header">
         <!--teacher name-->
         {{user.firstName}} {{user.lastName}}
-        {{input.courseNames}}
-        {{input.courseNums}}
+        
 
       </h1>
 
@@ -50,24 +50,23 @@
           <span>{{user.userName}}</span>
         </div>
       </div>
-      
     </div>
   <!--</div>-->
   <!--class scores-->
   <div class="row">
     <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
-      <h2>Classes </h2>
-
-      <a ng-repeat="d in input.courseNums"class="list-group-item">
-                
-              <!--name displayed in row-->
-                 <div class="list-group-item-heading">
-                {{d}}
-
-                </div>
-        
-          
-        </a>
+      <table class="table table-bordered" style = "width: 30%;margin-left:-2px" border-spacing: "5px">
+        <caption>Class codes for students to register</caption>
+    <thead>
+      <h2>Classes</h2>
+      <th>Codes</th>
+    </thead>
+    <tbody>
+      <tr ng-repeat="d in input.courseNums">
+        <td>{{d}}</td>
+      </tr>
+    </tbody>
+  </table>
 
 
 
