--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -1,5 +1,4 @@
 <div class="container" ng-controller="ProfileController">
-  <script src="/public/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
   <h1>Edit Profile</h1>
   <hr>
   <div class="row">
@@ -12,30 +11,75 @@
     <!-- left column -->
     <div class="col-md-3">
       <div class="text-center">
-        <img src="modules/core/client/img/user/carl.png" alt="" class="img-circle user-pic">        <h6>Upload a different photo...</h6>
+        <img ng-src="{{authentication.user.profileImageURL}}" alt="" class="img-circle user-pic">
+        <h6>Upload a different photo...</h6>
 
         <input type="file" class="form-control">
 
-        <nav aria-label="context" role="navigation"><ul class="nav" id="section-tabs"><li class="section"><a class="home" href="/" tabindex="0">Home</a></li>
-          <li class="section"><a class="profile" href="/about/851547" tabindex="0">Profile</a></li>
-          <li class="section"><a class="notifications" href="/profile/communication" tabindex="0">Notifications</a></li>
-          <li class="section"><a class="files" href="/files" tabindex="0">Files</a></li>
-          <li class="section"><a class="profile_settings active" href="/profile/settings" tabindex="0">Settings</a></li>
-          <li class="section"><a class="eportfolios" href="/dashboard/eportfolios" tabindex="0">ePortfolios</a></li></ul></nav>
+        <nav aria-label="context" role="navigation">
+          <ul class="nav" id="section-tabs">
+            <li class="section"><a class="home" href="/" tabindex="0">Home</a></li>
+            <li class="section"><a ng-click="profileVisible = true" class="profile" href="#" tabindex="0">Profile</a></li>
+            <li class="section"><a ng-click="profileVisible = false" class="profile_settings active" href="#" tabindex="0">Settings</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
 
     <!-- edit form column -->
     <div class="col-md-9 personal-info">
-      <div class="alert alert-info alert-dismissable">
+<!--       <div class="alert alert-info alert-dismissable">
         <a class="panel-close close" data-dismiss="alert">×</a>
         <i class="fa fa-coffee"></i>
         This is an <strong>.alert</strong>. Use this to show important messages to the user.
+      </div> -->
+      <h3>Account Information</h3>
+      <div class="col-lg-3">
+        <div class = "col-lg-8">
+          <label>Email</label>
+          <span>{{user.email}}</span><br>
+          <label>Username</label>
+          <span>{{user.userName}}</span>
+        </div>
       </div>
-      <h3>Personal info</h3>
+      
+    </div>
+  <!--</div>-->
 
+  <div class="row" ng-hide="isTeacher">
+    <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
+      <h1>Biotility</h1>
+      <h3>Course Progress</h3>
+      <script type="text/ng-template" id="group-template.html">
+        <div class="panel {{panelClass || 'panel-default'}}">
+          <div class="panel-heading">
+            <h4 class="panel-title" style="color:#fa39c3">
+              <a href tabindex="0" class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading"><span
+                ng-class="{'text-muted': isDisabled}">{{heading}}</span></a>
+            </h4>
+          </div>
+          <div class="panel-collapse collapse" uib-collapse="!isOpen">
+            <div class="panel-body" style="text-align: right" ng-transclude></div>
+          </div>
+        </div>
+      </script>
+
+      <uib-accordion close-others="oneAtATime">
+        <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
+          <p>{{group.content}}</p>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
+              {{group.progress}}% Complete
+            </div>
+          </div>
+        </uib-accordion-group>
+
+    </div>
+
+    <div class="col-md-9 col-md-offset-3" ng-hide="profileVisible">
       <form class="form-horizontal" role="form">
         <div class="form-group">
+
           <label class="col-lg-3 control-label">First name:</label>
           <div class="col-lg-8">
             <input class="form-control" type="text" value="{{user.firstName}}">
@@ -85,13 +129,13 @@
         <div class="form-group">
           <label class="col-md-3 control-label">Change Password:</label>
           <div class="col-md-8">
-            <input class="form-control" type="password" value="{{user.password}}">
+            <input class="form-control" type="password" value="">
           </div>
         </div>
         <div class="form-group">
           <label class="col-md-3 control-label">Confirm Password:</label>
           <div class="col-md-8">
-            <input class="form-control" type="password" value="{{user.password}}">
+            <input class="form-control" type="password" value="">
           </div>
         </div>
         <div class="form-group">
@@ -103,41 +147,128 @@
           </div>
         </div>
       </form>
+
+
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-9 col-md-offset-3">
-      <h1>Biotility</h1>
-      <h3>Select a course below</h3>
-      <script type="text/ng-template" id="group-template.html">
-        <div class="panel {{panelClass || 'panel-default'}}">
-          <div class="panel-heading">
-            <h4 class="panel-title" style="color:#fa39c3">
-              <a href tabindex="0" class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading"><span
-                ng-class="{'text-muted': isDisabled}">{{heading}}</span></a>
-            </h4>
-          </div>
-          <div class="panel-collapse collapse" uib-collapse="!isOpen">
-            <div class="panel-body" style="text-align: right" ng-transclude></div>
-          </div>
-        </div>
-      </script>
-
-      <uib-accordion close-others="oneAtATime">
-        <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
-          <p>{{group.content}}</p>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
-              <span class="sr-only">{{group.progress}}% Complete</span>
+    <div class="row" ng-show="isTeacher">
+      <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
+        <h1>Biotility</h1>
+        <h3>Course Progress</h3>
+        <script type="text/ng-template" id="group-template.html">
+          <div class="panel {{panelClass || 'panel-default'}}">
+            <div class="panel-heading">
+              <h4 class="panel-title" style="color:#fa39c3">
+                <a href tabindex="0" class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading"><span
+                  ng-class="{'text-muted': isDisabled}">{{heading}}</span></a>
+              </h4>
+            </div>
+            <div class="panel-collapse collapse" uib-collapse="!isOpen">
+              <div class="panel-body" style="text-align: right" ng-transclude></div>
             </div>
           </div>
-        </uib-accordion-group>
+        </script>
 
+        <uib-accordion close-others="oneAtATime">
+          <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
+            <p>{{group.content}}</p>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
+                <span class="sr-only">{{group.progress}}% Complete</span>
+              </div>
+            </div>
+          </uib-accordion-group>
+
+      </div>
+
+      <div class="col-md-9 col-md-offset-3" ng-hide="profileVisible">
+        <!-- change for to just a list or table or something -->
+        <form class="form-horizontal" role="form">
+          <div class="form-group">
+
+            <label class="col-lg-3 control-label">First name:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" disabled value="{{user.firstName}}" >
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Last name:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" value="{{user.lastName}}" disabled>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-3 control-label">School:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" value="" >
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Email:</label>
+            <div class="col-lg-8">
+              <input class="form-control" type="text" value="{{user.email}}">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-lg-3 control-label">Time Zone:</label>
+            <div class="col-lg-8">
+              <div class="ui-select">
+                <select id="user_time_zone" class="form-control">
+                  <option value="Hawaii">(GMT-10:00) Hawaii</option>
+                  <option value="Alaska">(GMT-09:00) Alaska</option>
+                  <option value="Pacific Time (US &amp; Canada)">(GMT-08:00) Pacific Time (US &amp; Canada)</option>
+                  <option value="Arizona">(GMT-07:00) Arizona</option>
+                  <option value="Mountain Time (US &amp; Canada)">(GMT-07:00) Mountain Time (US &amp; Canada)</option>
+                  <option value="Central Time (US &amp; Canada)" selected="selected">(GMT-06:00) Central Time (US &amp; Canada)</option>
+                  <option value="Eastern Time (US &amp; Canada)">(GMT-05:00) Eastern Time (US &amp; Canada)</option>
+                  <option value="Indiana (East)">(GMT-05:00) Indiana (East)</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label">Username:</label>
+            <div class="col-md-8">
+              <input class="form-control" type="text" value="{{user.userName}}">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label">Change Password:</label>
+            <div class="col-md-8">
+              <input class="form-control" type="password" value="">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label">Confirm Password:</label>
+            <div class="col-md-8">
+              <input class="form-control" type="password" value="">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3 control-label"></label>
+            <div class="col-md-8">
+              <input type="button" class="btn btn-primary" value="Save Changes">
+              <span></span>
+              <input type="reset" class="btn btn-default" value="Cancel">
+            </div>
+          </div>
+        </form>
+
+
+
+      </div>
     </div>
+
   </div>
+
+  <div class = "row">
+    <h1>Grades</h1>
+    <ul ng-repeat="grade in studentGrades">
+      <li> {{grade.category}} : {{grade.score}} </li>
+    </ul>
+  </div>
+
+
   <hr>
 </div>
-
-
-
