--- a/modules/core/client/views/studentProfileTeacherView.client.view.html
+++ b/modules/core/client/views/studentProfileTeacherView.client.view.html
@@ -37,13 +37,13 @@
       <h3>Personal info</h3>
       <div class="col-lg-3">
         <div class = "col-lg-8">
-          <label>Email</label>
-          <span>{{emailFinal}}</span>
-          <label>Username</label>
-          <span>{{userFinal}}</span>
-          <label>First Name</label>
-          <span>{{firstnameFinal}}</span>
-          <label>Last Name</label>
+          <label>Email</label><br>
+          <span>{{emailFinal}}</span><br>
+          <label>Username</label><br>
+          <span>{{userFinal}}</span><br>
+          <label>First Name</label><br>
+          <span>{{firstnameFinal}}</span><br>
+          <label>Last Name</label><br>
           <span>{{lastnameFinal}}</span>
         </div>
       </div> 
@@ -51,11 +51,10 @@
   <!--</div>-->
 
 
-  <!-- info for classes-->
-  <div class="row">
+  <div class="row" ng-hide="isTeacher" ng-controller="ProfileController">
     <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
       <h1>Biotility</h1>
-      <h3>Select a course below</h3>
+      <h3>Course Progress</h3>
       <script type="text/ng-template" id="group-template.html">
         <div class="panel {{panelClass || 'panel-default'}}">
           <div class="panel-heading">
@@ -75,14 +74,56 @@
           <p>{{group.content}}</p>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
-              <span class="sr-only">{{group.progress}}% Complete</span>
+              {{group.progress}}% Complete
             </div>
           </div>
         </uib-accordion-group>
 
     </div>
 
-    
+  
+
+    <div class="row" ng-show="isTeacher">
+      <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
+        <h1>Biotility</h1>
+        <h3>Course Progress</h3>
+        <script type="text/ng-template" id="group-template.html">
+          <div class="panel {{panelClass || 'panel-default'}}">
+            <div class="panel-heading">
+              <h4 class="panel-title" style="color:#fa39c3">
+                <a href tabindex="0" class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading"><span
+                  ng-class="{'text-muted': isDisabled}">{{heading}}</span></a>
+              </h4>
+            </div>
+            <div class="panel-collapse collapse" uib-collapse="!isOpen">
+              <div class="panel-body" style="text-align: right" ng-transclude></div>
+            </div>
+          </div>
+        </script>
+
+        <uib-accordion close-others="oneAtATime">
+          <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
+            <p>{{group.content}}</p>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
+                <span class="sr-only">{{group.progress}}% Complete</span>
+              </div>
+            </div>
+          </uib-accordion-group>
+
+      </div>
+
+    </div>
+
   </div>
+
+  <div class = "row" ng-controller="ProfileController">
+    <h1>Grades</h1>
+    <ul ng-repeat="grade in studentGrades">
+      <li> {{grade.category}} : {{grade.score}} </li>
+    </ul>
+  </div>
+
+
   <hr>
 </div>
